--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,32 @@
   vertical-align: .4em;
 }
 
+.down-arrow {
+  -webkit-transition: 0.7s;
+  -moz-transition: 0.7s;
+  -o-transition: 0.7s;
+  transition: 0.7s;
+  float: left;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+.down-arrow.selected {
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.show_more {
+  color: #0092db;
+  cursor: pointer;
+}
+
+.expandable_container {
+  display: none;
+  margin-bottom: 15px;
+}
+
 .no_error {
   position: absolute;
   left: 0;
@@ -193,7 +219,7 @@ body header, body section, body footer {
 body h1, body h2, body h3, body h4, body .portfolio_name {
   font-family: "Lato", Helvetica, Arial, sans-serif;
 }
-body p, body ul.columns {
+body p, body ul.no_columns, body ul.columns {
   font-family: "Roboto", Helvetica, Arial, sans-serif;
 }
 body h1, body h4 {
@@ -218,16 +244,16 @@ body h4.title {
   float: left;
   margin-right: 10px;
 }
-body p, body ul.columns {
+body p, body ul.no_columns, body ul.columns {
   font-size: 16px;
   font-weight: normal;
   line-height: 25px;
 }
-body p.company_name, body ul.columns.company_name {
+body p.company_name, body ul.no_columns.company_name, body ul.columns.company_name {
   padding: 3px 0;
   line-height: 1.5;
 }
-body p.description, body ul.columns.description {
+body p.description, body ul.no_columns.description, body ul.columns.description {
   font-style: italic;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -551,14 +577,22 @@ body header.sticky {
 body header + section#my_hello {
   padding-top: 103px;
 }
-body section#my_experience ul.columns {
+body section#my_experience ul.no_columns, body section#my_experience ul.columns {
   padding-left: 17px;
+}
+body section#my_experience ul.columns {
   -moz-column-count: 2;
   -moz-column-gap: 2.5em;
   -webkit-column-count: 2;
   -webkit-column-gap: 2.5em;
   column-count: 2;
   column-gap: 2.5em;
+}
+body section#my_experience ul + h4 {
+  margin-top: 15px;
+}
+body section#my_experience h4 + p {
+  margin-top: 0;
 }
 body section#my_portfolio ul.special {
   overflow: auto;
