--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,78 @@
   vertical-align: .4em;
 }
 
+.section_sidebar {
+  overflow: hidden;
+  padding-bottom: 40px;
+}
+
+#cwwbos_graph {
+  width: 100%;
+}
+#cwwbos_graph .cwwbos_graph_content {
+  float: none;
+  width: 100%;
+}
+#cwwbos_graph .cwwbos_graph_content h3, #cwwbos_graph .cwwbos_graph_content p {
+  text-align: left;
+}
+#cwwbos_graph .cwwbos_graph_content h3 {
+  margin: 0;
+}
+#cwwbos_graph .cwwbos_graph_content h3 span {
+  color: #cc0000;
+  text-decoration: underline;
+}
+#cwwbos_graph .cwwbos_graph_content {
+  overflow: hidden;
+}
+#cwwbos_graph .cwwbos_graph_content {
+  margin-top: 30px;
+}
+#cwwbos_graph .skillbar {
+  position: relative;
+  display: block;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 100%;
+  background: #eee;
+  height: 10px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -webkit-transition: 0.4s linear;
+  -moz-transition: 0.4s linear;
+  -ms-transition: 0.4s linear;
+  -o-transition: 0.4s linear;
+  transition: 0.4s linear;
+  -webkit-transition-property: width, background-color;
+  -moz-transition-property: width, background-color;
+  -ms-transition-property: width, background-color;
+  -o-transition-property: width, background-color;
+  transition-property: width, background-color;
+}
+#cwwbos_graph .skillbar-bar {
+  height: 10px;
+  width: 0px;
+  background: #76c932;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+}
+#cwwbos_graph .skillbar-bar::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
+  z-index: 1;
+  background-size: 50px 50px;
+  animation: move 2s linear infinite;
+  overflow: hidden;
+}
+
 .down-arrow {
   -webkit-transition: 0.7s;
   -moz-transition: 0.7s;
