--- a/css/main.scss
+++ b/css/main.scss
@@ -95,6 +95,77 @@ $roboto: "Roboto", Helvetica, Arial, sans-serif;
 	vertical-align: .4em;
 }
 
+.section_sidebar {overflow: hidden; padding-bottom: 40px;}
+
+#cwwbos_graph {
+	width: 100%;
+	
+	.cwwbos_graph_content {
+		float: none;
+		width: 100%;
+		
+		h3, p {text-align: left;}
+
+		h3 {
+			span {
+				
+				color:#cc0000; 
+				text-decoration: underline;
+			}
+			margin: 0;
+		}
+	}
+	
+	.cwwbos_graph_content {
+		overflow: hidden;
+	}
+	
+	.cwwbos_graph_content {margin-top: 30px;}
+	
+	.skillbar {
+		position:relative;
+		display:block;
+		margin-top: 25px;
+		margin-bottom:25px;
+		width:100%;
+		background:#eee;
+		height:10px;
+		border-radius:5px;
+		-moz-border-radius:5px;
+		-webkit-border-radius:5px;
+		-webkit-transition:0.4s linear;
+		-moz-transition:0.4s linear;
+		-ms-transition:0.4s linear;
+		-o-transition:0.4s linear;
+		transition:0.4s linear;
+		-webkit-transition-property:width, background-color;
+		-moz-transition-property:width, background-color;
+		-ms-transition-property:width, background-color;
+		-o-transition-property:width, background-color;
+		transition-property:width, background-color;
+	}
+	
+	.skillbar-bar {
+		height:10px;
+		width:0px;
+		background:#76c932;
+		border-radius:5px;
+		-moz-border-radius:5px;
+		-webkit-border-radius:5px;
+		
+		&::after {
+		  content: "";
+		  position: absolute;
+		  top: 0; left: 0; bottom: 0; right: 0;
+		  background-image: linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+		  z-index: 1;
+		  background-size: 50px 50px;
+		  animation: move 2s linear infinite;
+		  overflow: hidden;
+		}
+	}
+}//end #cwwbos_graph
+
 .down-arrow {
 	@include transition(.7s);
 	float: left;
@@ -291,38 +362,38 @@ body {
 		font-family: $lato;
 
 
-			@include fontsizeweightline (12px, 700, 20px);
+		@include fontsizeweightline (12px, 700, 20px);
 
-			li {
-				margin: 8px 0 10px 20px;
-				cursor: pointer;
+		li {
+			margin: 8px 0 10px 20px;
+			cursor: pointer;
 
-				span {
-					&.cool-link {
+			span {
+				&.cool-link {
 
-					 	&::after, &:hover::after {
+				 	&::after, &:hover::after {
 
-					 		content: '';
-						    display: block;
-						    width: 0;
-						    margin-left: auto;
-						    margin-right: auto;
-						    margin-top: 4px;
-						    height: 1px;
-						    background: #4d4d4d;
-						    @include transition(width .3s);
-					 	}
+				 		content: '';
+					    display: block;
+					    width: 0;
+					    margin-left: auto;
+					    margin-right: auto;
+					    margin-top: 4px;
+					    height: 1px;
+					    background: #4d4d4d;
+					    @include transition(width .3s);
 				 	}
+			 	}
 
-				&:hover.cool-link::after {width: 100%;}
-				}
+			&:hover.cool-link::after {width: 100%;}
 			}
+		}
 
-			& > li{
-				display: inline-block;
-				padding-left: 5px;
-				padding-right: 5px;
-			}
+		& > li{
+			display: inline-block;
+			padding-left: 5px;
+			padding-right: 5px;
+		}
 	}//end ul.special
 
 	input, textarea, .my_error {
