--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,10 @@
   display: block;
 }
 
+.clear {
+  clear: both;
+}
+
 .super {
   font-size: .7em;
   line-height: 0;
@@ -467,8 +471,20 @@ body .cols_50 {
 body .cols_66 {
   width: 66.666666%;
 }
-body .cols_100 {
+body .cols_100, body .experience_row {
   width: 100%;
+}
+body .experience_row.extra_padding {
+  padding-left: 70px;
+  position: relative;
+}
+body .experience_row.extra_padding img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: auto;
+  border-radius: 3px;
 }
 body .about_me_content {
   float: left;
@@ -526,6 +542,14 @@ body .about_me_content .about_me_info p span.span_icons a.my_github {
 }
 body .about_me_content .about_me_info p span.span_icons a.my_github:hover {
   background: url("../images/icons8-github-hover.png") top left no-repeat;
+  background-size: contain;
+}
+body .about_me_content .about_me_info p span.span_icons a.my_instagram {
+  background: url("../images/icons8-instagram-50.png") top left no-repeat;
+  background-size: contain;
+}
+body .about_me_content .about_me_info p span.span_icons a.my_instagram:hover {
+  background: url("../images/icons8-instagram-hover.png") top left no-repeat;
   background-size: contain;
 }
 body .about_me_image {
