--- a/css/responsive.css
+++ b/css/responsive.css
@@ -55,6 +55,18 @@
     right: 0;
     background-color: blue;
   }
+  body ul.special li {
+    margin: 8px 0 10px 0;
+  }
+}
+@media only screen and (max-width: 960px) {
+  .zig_zag {
+    display: none;
+  }
+
+  .section_sidebar {
+    padding-bottom: 0;
+  }
 }
 @media only screen and (max-width: 940px) {
   body h1 {
@@ -112,7 +124,15 @@
     float: none;
   }
 }
+@media only screen and (max-width: 620px) {
+  body h4.title {
+    float: none;
+  }
+}
 @media only screen and (max-width: 480px) {
+  body h1 {
+    font-size: 25px;
+  }
   body .cta {
     min-width: 100%;
   }
