--- a/css/main.scss
+++ b/css/main.scss
@@ -198,6 +198,10 @@ $roboto: "Roboto", Helvetica, Arial, sans-serif;
 	padding-top: 50px;
 	display: none;
 
+	img {
+		width: none;
+	}
+
 	&.active {
 		display: block;
 	}
