--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,10 +64,6 @@
   }
 }
 @media only screen and (max-width: 960px) {
-  .zig_zag {
-    display: none;
-  }
-
   .section_sidebar {
     padding-bottom: 0;
   }
@@ -122,6 +118,9 @@
   .modal.fade .modal_dialog img {
     width: 100%;
     height: auto;
+  }
+  .modal.fade .modal_dialog .no_error img, .modal.fade .modal_dialog .loading img {
+    width: auto;
   }
   .modal.in .modal_center {
     transform: translateY(0) !important;
