--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -84,7 +84,6 @@
 
 @media only screen and (max-width: 960px) { 
 
-	.zig_zag {display:  none;}
 	.section_sidebar {padding-bottom: 0;}
 }
 
@@ -163,6 +162,11 @@
 					width: 100%;
 					height: auto;
 				}
+				.no_error, .loading {
+
+					img {width: auto;}
+				}
+
 			}
 		}
 
